--- a/package.json
+++ b/package.json
@@ -4,14 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "webpack-dev-server",
+    "hot": "webpack-dev-server --hot --inline"
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "testFileExtensions": [
+      "es6",
+      "js"
+    ],
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react"
+    ]
   },
   "author": "Tuija",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.1.20",
+    "babel-jest": "5.3.0",
     "babel-loader": "^6.1.0",
     "file-loader": "^0.8.4",
+    "jest-cli": "0.6.1",
+    "react-addons-test-utils": "^0.14.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
