--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "js"
     ],
     "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react"
+      "<rootDir>/node_modules"
     ]
   },
   "author": "Tuija",
@@ -34,6 +34,8 @@
   "dependencies": {
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "flux": "^2.1.1",
+    "object-assign": "^4.0.1",
     "react": "^0.14.2",
     "react-dom": "^0.14.2"
   }
