--- a/package.json
+++ b/package.json
@@ -21,19 +21,27 @@
   "author": "Tuija",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^6.1.0",
+    "autoprefixer-core": "^6.0.1",
     "babel-core": "^6.1.20",
     "babel-jest": "5.3.0",
     "babel-loader": "^6.1.0",
+    "css-loader": "^0.22.0",
     "file-loader": "^0.8.4",
     "jest-cli": "0.6.1",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.0",
     "react-addons-test-utils": "^0.14.2",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.4",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "bootstrap": "^3.3.5",
     "flux": "^2.1.1",
     "object-assign": "^4.0.1",
     "react": "^0.14.2",
