--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "bootstrap": "^3.3.5",
+    "classnames": "^2.2.0",
     "flux": "^2.1.1",
     "object-assign": "^4.0.1",
     "react": "^0.14.2",
